<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Lara Martín as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2017 Lara Martín
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Meds reminder</string>
    <string name="meds_tab">Meds</string>
    <string name="friends_tab">Friends</string>
    <string name="report_tab">Report</string>
    <string name="meds_toolbar_subtitle">My meds</string>
    <string name="friends_subtitle">My friends</string>
    <string name="report_subtitle">My report</string>
    <string name="friends_toolbar_subtitle">My friends</string>
    <string name="report_tootlbar_subtitle">My report</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="save">Save</string>

    <!-- Add med screen -->
    <string name="add_med_title">Add med</string>
    <string name="add_name_label">Name</string>
    <string name="add_time_label">Time</string>
    <string name="add_days_label">Days</string>
    <string name="add_med_day_monday">Mo</string>
    <string name="add_med_day_tuesday">Tu</string>
    <string name="add_med_day_wednesday">We</string>
    <string name="add_med_day_thursday">Th</string>
    <string name="add_med_day_friday">Fr</string>
    <string name="add_med_day_saturday">Sa</string>
    <string name="add_med_day_sunday">Su</string>
    <string name="add_dosage_label">Dosage</string>
    <string name="add_notes_label">Notes</string>
    <string name="add_med_error_empty_name">Please enter a name</string>
    <string name="add_time_default">10:00</string>
    <string name="add_time_picker_title">Select time</string>
    <string name="add_select_day_error">Please select the days</string>
    <string-array name="dosage_array">
        <item>Capsule</item>
        <item>Liquid</item>
        <item>Syrup</item>
        <item>Injection</item>
        <item>Suppository</item>
        <item>Drop</item>
        <item>Inhaler</item>
        <item>Topic</item>
    </string-array>

    <string name="add_med_content_description_monday">@string/meds_monday</string>
    <string name="add_med_content_description_tuesday">@string/meds_tuesday</string>
    <string name="add_med_content_description_wednesday">@string/meds_wednesday</string>
    <string name="add_med_content_description_thursday">@string/meds_thursday</string>
    <string name="add_med_content_description_friday">@string/meds_friday</string>
    <string name="add_med_content_description_saturday">@string/meds_saturday</string>
    <string name="add_med_content_description_sunday">@string/meds_sunday</string>
    <string name="add_med_content_description_notes">Add your notes here</string>
    <string name="add_med_content_description_name">Add the name of your med</string>
    <string name="add_med_content_description_day_selected">%s is now selected.</string>
    <string name="add_med_content_description_day_unselected">%s is now unselected.</string>

    <!-- Meds list screen -->
    <string name="meds_edit_title">Edit</string>
    <string name="meds_take_title">Take</string>
    <string name="meds_monday">Monday</string>
    <string name="meds_tuesday">Tuesday</string>
    <string name="meds_wednesday">Wednesday</string>
    <string name="meds_thursday">Thursday</string>
    <string name="meds_friday">Friday</string>
    <string name="meds_saturday">Saturday</string>
    <string name="meds_sunday">Sunday</string>
    <string name="meds_taken_feedback">taken!</string>
    <string name="meds_content_description_fab">Add a new med</string>
    <string name="meds_content_description_take_button">Mark your medicine as taken</string>
    <string name="meds_content_description_edit_button">Edit med feature is currently disabled</string>
    <string name="meds_content_description_reminder">A reminder is set for this med</string>

    <!-- Dialogs -->
    <string name="dialog_delete_med_description">Are you sure you want to remove this med? You will lose all the med data.</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_give_permissions_to_friend">Give permissions to your love ones so they are able to see your next med and the last takes.</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_permissions_title">Grant permissions to a friend</string>
    <string name="dialog_delete_permission_description">Are you sure you want to revoke permissions from %s? Your friend will lose access to see your meds.</string>

    <!-- Menu -->
    <string name="menu_reminders">Reminders</string>
    <string name="menu_permissions">Permissions</string>
    <string name="menu_logout">Logout</string>

    <!-- Reminders screen -->
    <string name="reminders_screen_title">Reminders</string>
    <string name="reminder_notification_title">It\'s time!</string>
    <string name="reminder_notification_body">It\'s time to take your meds :)</string>
    <string name="reminder_day_bundle_key">reminder_day_key</string>
    <string name="reminder_time_bundle_key">reminder_time_key</string>
    <string name="reminder_tag_bundle_key">reminder_id_key</string>
    <string name="reminder_content_description_switch">Switch to enable reminders to take your med</string>

    <!-- Permissions screen -->
    <string name="permissions_screen_title">Permissions</string>
    <string name="intent_email_subject">Meds reminder permission</string>
    <string name="intent_email_body">Hello!  I just granted you permission to see the meds I\'m taking with the Med Reminders App. Check it out!</string>
    <string name="toast_no_email_provider">There aren\'t email apps installed...</string>
    <string name="permissions_content_description_fab">click to grant permission to a friend</string>
    <string name="permissions_content_description_icon">Send an email to your friend to say you granted permission to see your meds.</string>

    <!-- Friends screen -->
    <string name="last_takes_label">Last 5 takes</string>
    <string name="friends_takes_empty">Nothing to show</string>

    <!-- Widget -->
    <string name="widget_empty_meds_list">Add meds in the database to show them here :)</string>

</resources>
