<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.laramartin.medsreminder.meds.AddMedActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="32dp"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="81dp"/>

            <TextView
                android:id="@+id/add_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_name_label"
                app:layout_constraintBottom_toBottomOf="@+id/add_name_input_text_layout"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/add_name_input_text_layout"
                app:layout_constraintVertical_bias="0.504"/>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/add_name_input_text_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/add_name_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_dosage_icon"
                app:layout_constraintVertical_bias="0.0">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_time_label"
                app:layout_constraintBottom_toBottomOf="@+id/add_time_input"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/add_time_input"
                app:layout_constraintTop_toTopOf="@+id/add_time_input"/>

            <TextView
                android:id="@+id/add_time_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_time_default"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/add_name_input_text_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_name_input_text_layout"/>

            <TextView
                android:id="@+id/add_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_days_label"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/add_time_input"
                app:layout_constraintRight_toRightOf="@+id/add_time_input"
                app:layout_constraintTop_toBottomOf="@+id/add_time_input">

                <TextView
                    android:id="@+id/add_days_monday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_monday"/>

                <TextView
                    android:id="@+id/add_days_tuesday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_tuesday"/>

                <TextView
                    android:id="@+id/add_days_wednesday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_wednesday"/>

                <TextView
                    android:id="@+id/add_days_thursday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_thursday"/>

                <TextView
                    android:id="@+id/add_days_friday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_friday"/>

                <TextView
                    android:id="@+id/add_days_saturday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_saturday"/>

                <TextView
                    android:id="@+id/add_days_sunday"
                    android:layout_width="@dimen/add_med_day_button_size"
                    android:layout_height="@dimen/add_med_day_button_size"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@color/colorSoftGrey"
                    android:gravity="center"
                    android:text="@string/add_med_day_sunday"/>

            </LinearLayout>

            <TextView
                android:id="@+id/add_dosage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/add_dosage_label"
                app:layout_constraintBottom_toBottomOf="@+id/add_dosage_spinner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/add_dosage_spinner"
                app:layout_constraintTop_toTopOf="@+id/add_dosage_spinner"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/add_dosage_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
                app:layout_constraintRight_toRightOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

            <TextView
                android:id="@+id/add_notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_notes_label"
                app:layout_constraintBottom_toBottomOf="@+id/add_notes_input"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/add_notes_input"
                app:layout_constraintTop_toTopOf="@+id/add_notes_input"/>

            <EditText
                android:id="@+id/add_notes_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:maxLength="200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/add_dosage_spinner"
                app:layout_constraintRight_toRightOf="@+id/add_dosage_spinner"
                app:layout_constraintTop_toBottomOf="@+id/add_dosage_spinner"/>

            <ImageView
                android:id="@+id/add_dosage_icon"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:padding="24dp"
                android:src="@drawable/ic_capsule_128"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
